deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange
  labels:
    app: exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
      - name: exchange
        image: nexweb1/exchange
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
