deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exchange
  labels:
    app: exchange
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: exchange
